# fujinx

./: .gitattributes  .gitignore  Cargo.toml  README.md
doc/: CHANGES.md
src/: colors.rs  config.rs  error.rs  lib.rs
src/cli/: camera.rs  convert.rs  help.rs  main.rs  parse.rs  progress.rs  recipe.rs  repo.rs
src/fuji/: camera.rs  codec.rs  mod.rs  recipe.rs
src/ptp/: camera_info.rs  dataset.rs  mod.rs  object_info.rs  session.rs  usb.rs
tests/: camera_info.rs  object_info.rs  recipe.rs
tests/cli/: all.sh  hitl.sh  hootl.sh  setup.sh
tests/images/X-M5/: alley.raf  ec_plus_2.raf  tram.raf  wheel.raf
tests/recipes/: kodachrome_64.yaml  pacific_blues.yaml  portra_400_v2.yaml
