[package]
name = "fujinx"
version = "0.4.0"
edition = "2024"
description = "Command line tools for Fujifilm X Series cameras"
license = "MIT"
homepage = "https://github.com/calder/fujinx"
repository = "https://github.com/calder/fujinx"
documentation = "https://github.com/calder/fujinx"
include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "tests/**/*.yaml",
    "Cargo.toml",
    "README.md",
]

[[bin]]
name = "fj"
path = "src/cli/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
num_enum = "0.7"
rusb = "0.9"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
shellexpand = "3.1.2"
yansi = "1.0"

[dev-dependencies]
rstest = "0.25"
